--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Resa-Obamwonyi/photo-generator-library#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "nodejs": "^0.0.0"
   }
 }
