--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Resa-Obamwonyi/photo-generator-library#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.11",
     "nodejs": "^0.0.0"
   }
 }
